# Foresee-the-Unseen-ROS

./: .gitignore  .gitmodules  README.md
foresee_the_unseen/: nodes_to_launch.txt  package.xml  requirements.txt  setup.cfg  setup.py
foresee_the_unseen/config/: commonroad_scenario.yaml  ekf.yaml  ekf_obstacle.yaml  fov_node.yaml  mapper_params_localization.yaml  mapper_params_localization_ekf.yaml  mapper_params_online_async.yaml  mapper_params_online_async_ekf.yaml  obstacle_trajectories_node.yaml  planner_node.yaml  visualization_node.yaml
foresee_the_unseen/foresee_the_unseen/: __init__.py  deskew_lidar.py  deskew_lidar_2scans.py  foresee_the_unseen_node.py  fov_node.py  logging_exp_node.py  logging_node.py  obstacle_trajectories_node.py  planner_node.py  save_topics_node.py  test_corner_trajectories_node.py  test_straight_trajectories_node.py  test_trajectories_node.py  topics_to_disk_node.py  visualization_node.py
foresee_the_unseen/foresee_the_unseen/lib/: error_model.py  filter_fov.py  foresee_the_unseen.py  helper_functions.py  obstacle_trajectories.py  occlusion_tracker.py  planner.py  sensor.py  triangulate.py  utilities.py
foresee_the_unseen/launch/: basics_launch.py  bringup_laptop_launch.py  bringup_obstacle_launch.py  bringup_robot_launch.py  build_map_launch.py  main_launch copy.py  main_launch.py  obs_traj_launch.py  obstacle_launch.py  planner_launch.py  robot_local_launch.py  sensor_fusion_launch.py  store_rosbag_launch.py  using_map_launch.py
foresee_the_unseen/launch/partial_launches/: obs_traj_launch.py  planner_launch.py
foresee_the_unseen/launch/slam_toolbox/: localization_launch.py  online_async_launch.py
foresee_the_unseen/resource/: commonroad_scenario.yaml  fcd.xml  obstacle_trajectories.yaml  obstacle_trajectories_test.yaml  road_3_way_50_cm.xml  road_structure_15.xml  road_structure_15_reduced_points.xml  ros_params_scenario.yaml
foresee_the_unseen/resource/fcd_xmls/: scenario_1.xml
foresee_the_unseen/resource/road_xmls/: road_3way_50cm.xml  road_4way_40cm.xml  road_4way_50cm.xml  road_4way_50cm_6cm.xml  road_4way_50cm_medianstrip.xml
racing_bot_bringup/: setup.py
racing_bot_bringup/config/: ekf.yaml  ekf_obstacle.yaml  slam_params.yaml
racing_bot_bringup/launch/: bringup_laptop_launch.py  bringup_obstacle_launch.py  bringup_robot_launch.py
racing_bot_bringup/launch/partial_launches/: obs_traj_launch.py  planner_launch.py  slam_launch.py  static_transforms_launch.py
racing_bot_bringup/launch/slam_toolbox/: localization_launch.py
racing_bot_bringup/rviz/: full_mode.rviz  light_mode.rviz  medium_mode.rviz
racing_bot_controller/: CMakeLists.txt  package.xml
racing_bot_controller/include/: controller_constants.hpp  controller_node.hpp
racing_bot_controller/src/: controller_node.cpp  main.cpp  teleop_key_control.cpp
racing_bot_controller/test/: controller_test.cpp
racing_bot_encoder/: CMakeLists.txt  package.xml
racing_bot_encoder/config/: encoder_node.yaml  robot_params.yaml
racing_bot_encoder/include/: encoder_constants.hpp  encoder_node.hpp  encoder_sensor.hpp
racing_bot_encoder/src/: encoder_node.cpp  main.cpp
racing_bot_hat/include/: hat_node.hpp
racing_bot_hat/src/: hat_node.cpp
racing_bot_imu/: CMakeLists.txt
racing_bot_imu/config/: imu_node.yaml
racing_bot_imu/include/: MadgwickAHRS.h  imu_constants.hpp  imu_node.hpp  transform_imu.h
racing_bot_imu/src/: MadgwickAHRS.cpp  imu_node.cpp
racing_bot_interfaces/: CMakeLists.txt
racing_bot_interfaces/msg/: EncoderValues.msg  ProjectedOccludedArea.msg  Trajectory.msg
racing_bot_odometry/: CMakeLists.txt  package.xml
racing_bot_odometry/config/: odometry_node.yaml  robot_params.yaml
racing_bot_odometry/include/: odometry_constants.hpp  odometry_node.hpp
racing_bot_odometry/src/: main.cpp  odometry_node.cpp
racing_bot_odometry/test/: odometry_test.cpp
racing_bot_scan_sim/: package.xml  setup.cfg  setup.py
racing_bot_scan_sim/config/: scan_simulate_node.yaml
racing_bot_scan_sim/racing_bot_scan_sim/: scan_simulate_node.py
racing_bot_simulation/: package.xml  setup.cfg  setup.py
racing_bot_simulation/racing_bot_simulation/: odometry_sensor_node.py  scan_sensor_node.py
racing_bot_trajectory_follower/: package.xml  setup.cfg  setup.py
racing_bot_trajectory_follower/config/: .trajectory_follower_node.yaml.swp  robot_params.yaml  trajectory_follower_node.yaml  trajectory_follower_node_obstacle.yaml
racing_bot_trajectory_follower/racing_bot_trajectory_follower/: trajectory_follower_node.py  trajectory_follower_node_obstacle.py
racing_bot_trajectory_follower/racing_bot_trajectory_follower/lib/: trajectories.py
